--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
+    "compression": "^1.8.0",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -12,6 +13,9 @@
     "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "geoip-lite": "^1.4.10",
+    "ip-range-check": "^0.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
@@ -20,6 +24,8 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
-    "uuid": "^11.1.0"
+    "satelize": "^0.2.0",
+    "uuid": "^11.1.0",
+    "validator": "^13.12.0"
   }
 }
