--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
     "cloudinary": "^2.5.1",
     "compression": "^1.8.0",
     "config": "^3.3.12",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "geoip-lite": "^1.4.10",
+    "helmet": "^8.0.0",
     "ip-range-check": "^0.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.14.2",
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -26,6 +31,7 @@
     "otp-generator": "^4.0.1",
     "satelize": "^0.2.0",
     "uuid": "^11.1.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xss-clean": "^0.1.4"
   }
 }
