--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
     "satelize": "^0.2.0",
+    "serverless-http": "^3.2.0",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
