--- a/package.json
+++ b/package.json
@@ -35,5 +35,25 @@
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "apiroute.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AleemTalha/Mern-project-2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AleemTalha/Mern-project-2/issues"
+  },
+  "homepage": "https://github.com/AleemTalha/Mern-project-2#readme",
+  "description": ""
 }
