--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   },
   "name": "backend",
   "version": "1.0.0",
-  "main": "apiroute.js",
+  "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
