--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "otp-generator": "^4.0.1",
     "satelize": "^0.2.0",
     "serverless-http": "^3.2.0",
+    "sharp": "^0.33.5",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
@@ -39,7 +40,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
