--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
+    "https": "^1.0.0",
     "ip-range-check": "^0.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
